--- a/web-final/pom.xml
+++ b/web-final/pom.xml
@@ -106,6 +106,18 @@
             <artifactId>postgresql</artifactId>
             <version>42.5.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 </project>
