--- a/web-final/pom.xml
+++ b/web-final/pom.xml
@@ -119,5 +119,16 @@
             <artifactId>mybatis-spring-boot</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.58</version>
+        </dependency>
+
     </dependencies>
 </project>
