--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
+    "element-plus": "^2.3.1",
+    "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "thpace": "^2.0.2",
     "vue": "^3.0.4",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/webpack-env": "^1.18.0",
     "@vue/compiler-sfc": "^3.0.4",
     "less": "^4.1.3",
     "unplugin-vue-components": "^0.24.1",
