--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.1",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
