--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@fireworks-js/vue": "^2.10.2",
+    "@kjgl77/datav-vue3": "^1.4.2",
     "@surely-vue/table": "^3.0.2",
     "@vitejs/plugin-vue": "^4.1.0",
     "ant-design-vue": "^3.2.15",
@@ -25,6 +26,7 @@
     "@types/webpack-env": "^1.18.0",
     "@vue/compiler-sfc": "^3.0.4",
     "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.1"
   }
